--- a/index.html
+++ b/index.html
@@ -4,22 +4,18 @@
 	<!--  App Title  -->
 	<title>DailyLines - Inspire your days with daily quotes and more...</title>
 	<!--  App Description  -->
-	<meta name="description" content="App is a user friendly, easy and fun to use."/>
+	<meta name="description" content="DailyLines App is a user friendly, easy and fun to use."/>
 	<meta charset="utf-8">
-	<meta name="author" content="pixelhint.com">
+	<meta name="author" content="Gianluigi Mango">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css"/>
-	<link rel="stylesheet" type="text/css" href="css/owl.transitions.css"/>
-	<link rel="stylesheet" type="text/css" href="css/owl.carousel.css"/>
 	<link rel="stylesheet" type="text/css" href="css/animate.css"/>
 	<link rel="stylesheet" type="text/css" href="css/main.css"/>
-
 	
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/ajaxchimp.js"></script>
 	<script type="text/javascript" src="js/scrollTo.js"></script>
-	<script type="text/javascript" src="js/owl.carousel.min.js"></script>
 	<script type="text/javascript" src="js/wow.js"></script>
 	<script type="text/javascript" src="js/parallax.js"></script>
 	<script type="text/javascript" src="js/nicescroll.js"></script>
@@ -44,8 +40,8 @@
 
 			<div class="social pull-right">
 				<ul class="list-unstyled">
-					<li class="animated wow fadeInRight" data-wow-delay=".2s"><a href="http://www.facebook.com/dailylinesapp"><img src="img/facebook.png" alt="" title=""></a></li>
-					<li class="animated wow fadeInRight" data-wow-delay=".1s"><a href="http://twitter.com/dailylinesapp"><img src="img/twitter.png" alt="" title=""></a></li>
+					<li class="animated wow fadeInRight" data-wow-delay=".2s"><a href="http://www.facebook.com/gianluigimango" target="_blank"><img src="img/facebook.png" alt="" title=""></a></li>
+					<li class="animated wow fadeInRight" data-wow-delay=".1s"><a href="https://twitter.com/gianluigimango" target="_blank"><img src="img/twitter.png" alt="" title=""></a></li>
 				</ul>
 			</div>
 
@@ -67,7 +63,7 @@
 				<h1 class="text-uppercase animated wow fadeInLeft">A "DailyLine day"</h1>
 				<p class="animated wow fadeInLeft">Fun and easy to use..<br>Choose a category and go!</p>
 
-				<a href="https://itunes.apple.com/app/dailylines-lite/id1041808619?ls=1&mt=8" class="app_store_btn text-uppercase animated wow fadeInLeft">
+				<a href="https://itunes.apple.com/app/dailylines-lite/id1041808619?ls=1&mt=8" class="app_store_btn text-uppercase animated wow fadeInLeft" target="_blank">
 					<i class="iphone_icon"></i>
 					<span>IOS App</span>
 				</a>
@@ -162,7 +158,7 @@
 	<footer>
 		<ul class="list-unstyled list-inline app_platform">
 			<li class="animated wow fadeInDown" data-wow-delay=".1s">
-				<a href="https://itunes.apple.com/app/dailylines-lite/id1041808619?ls=1&mt=8"><img src="img/ios_icon.png" alt="" title=""></a>
+				<a href="https://itunes.apple.com/app/dailylines-lite/id1041808619?ls=1&mt=8" target="_blank"><img src="img/ios_icon.png" alt="" title=""></a>
 			</li>
 		</ul>
 		<p class="copyright animated wow fadeIn" data-wow-duration="2s">© 2015 <a href="https://uk.linkedin.com/in/gianluigimango" target="_blank"><strong>Gianluigi Mango</strong></a>. All Rights Reserved</p>
